# Fwnn-websocket

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: aoi.h  easyfwnn.h
lib/aoi/: aoi.c
lib/cwebsocket/: CMakeLists.txt
lib/easyfwnn/: easyfwnn.c
sample/: index.html
server/: CMakeLists.txt  izumooyashiro.h  izumowebsock.c  main.c
src/include/: easyfwnn.h
src/lib/easyfwnn/: CMakeLists.txt  easyfwnn.c
src/lib/manyowebsock/: CMakeLists.txt  websocket.c
src/server/: CMakeLists.txt  izumooyashiro.h  izumowebsock.c  main.c
